objects/CQS_Allegati__c.object
<CustomObject>
    <description>this object has been created to &quot;customize&quot; attachment</description>
    <fields>
        <fullName>CQS_All_Descrizione__c</fullName>
        <label>Descrizione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CQS_All_Tipo_Allegato__c</fullName>
        <label>Tipo di Allegato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>----------------------------------</fullName>
                </value>
                <value>
                    <fullName>Documento Pre Ripristino</fullName>
                </value>
                <value>
                    <fullName>Documento Post Ripristino</fullName>
                </value>
                <value>
                    <fullName>Verbale Rilascio Ente Gestore</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_All_View__c</fullName>
        <formula>HYPERLINK(&quot;https://openfiber-it.my.salesforce.com/&quot;+CQS_Ev_Allegato__c,&quot;View&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_All_ev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evento</label>
        <referenceTo>OF_CQS_Evento__c</referenceTo>
        <relationshipLabel>Allegati</relationshipLabel>
        <relationshipName>CQS_Allegati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Allegato__c</fullName>
        <label>Allegato</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Allegato</label>
    <nameField>
        <label>Nome Allegato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allegati</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>